# ChangeLog for x11-misc/lightdm
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/ChangeLog,v 1.2 2010/09/08 07:09:21 xarthisius Exp $

  08 Sep 2010; Kacper Kowalik <xarthisius@gentoo.org> lightdm-0.1.1.ebuild,
  +files/lightdm-0.1.1-webkit.patch, metadata.xml:
  Make webkit greeter optional, add missing doc flag and dependencies.

*lightdm-0.1.1 (07 Sep 2010)

  07 Sep 2010; Kacper Kowalik <xarthisius@gentoo.org> +lightdm-0.1.1.ebuild,
  +metadata.xml:
  Initial import wrt bug 336304. Ebuild written by Samuli Suominen
  <ssuominen@gentoo.org>.
