@@ -1,5 +1,7 @@
 AUX lightdm-0.1.1-webkit.patch 1735 RMD160 2d0b1133a9bafe157ed08a92dbcb0a704b2b073d SHA1 ebe249cbea4fe4d7fec4fe8aae5a82d0afd1db0e SHA256 7970341481d45a386f473f440907ae55b58aff3ff62b7a73f81c22e985820b8b
 DIST lightdm-0.1.1.tar.gz 827695 RMD160 20d1be2c0ae9df9bd57229202e1bfdfcaf765c46 SHA1 2cb3e9d284828f43c8080d343ad5c23fc025b356 SHA256 0c0a25d563ff1b8edf1ff40ee773da0dc72aef8ae58903adb92263ddbe22d6ee
+DIST lightdm-0.1.2.tar.gz 820213 RMD160 21b7f12a39e4b8491f9e802c7f7a15096201ee3c SHA1 20509505e24cd99cd701d1771268239140d75da7 SHA256 60f84420a072ae1f9a7026300d10f1df62111522284d4771ab7823e1e9617a2f
 EBUILD lightdm-0.1.1.ebuild 1638 RMD160 12646c1af39a151c0198ed1ca8356a0135a422ea SHA1 9f5f8ca3ade6de02212d16a455b183b0f6a93ad0 SHA256 a878d39141f98f0ced3e8e90300c7f9ed4411002fbbd55686bb12f0b7003a3fc
-MISC ChangeLog 626 RMD160 19f43758f01397b94caa0208c0da6d55839f13ed SHA1 85e6e83a8c7cad4305276c84a562fbf3392150e2 SHA256 baa5063aef34967d52ab605204c211ec5d1a38bedbc29bf0eb903b54a873e59f
-MISC metadata.xml 685 RMD160 995e95e96fe048faa98b62a7d80e9239b667185e SHA1 19421f10a235a09ec78cf6732859200021209dda SHA256 3aa93a8186d0176045b192052c3cc19ece173c616a1dd8504412c5dc4ec69f2e
+EBUILD lightdm-0.1.2.ebuild 1574 RMD160 1fef6bd0049d52bfa659d46aea6c024e4500de43 SHA1 9e8723387ac3312a25566b6a624e59a8e6eb4596 SHA256 aea8e5a06805137d0da4e4057362926ca04094fc12281e23dff2f0365ebd5842
+MISC ChangeLog 749 RMD160 664cece73ba9796d028ff54586d9b4bfc101d1b3 SHA1 0cda8d3ac2a360566e7f3e9e75b448e714ae38a3 SHA256 9080705dd2b0bb8526f92b5c3d534c1d873df36f062692b7a7a791506a83b22d
+MISC metadata.xml 780 RMD160 c1ffc9f94cdced4916b5ac32c9bbac062d88c20c SHA1 e5b07271d9266fb2e62f430215bfc9d477f464db SHA256 54fb38ddfeb9e87bd9d5e8ca069283d377680b0aa882c0ae98380505bfbce580
