@@ -10,7 +10,8 @@
 	 * Cross-desktop (greeters can be written in any toolkit)
 	</longdescription>
 	<use>
-	  <flag name="consolekit">Enables support for authorization using consolekit</flag>
-	  <flag name="webkit">Build greeter based on <pkg>net-libs/webkit-gtk</pkg></flag>
-    </use>
+	 <flag name="consolekit">Enables support for authorization using consolekit</flag>
+	 <flag name="webkit">Build greeter based on <pkg>net-libs/webkit-gtk</pkg></flag>
+	 <flag name="introspection">Use <pkg>dev-libs/gobject-introspection</pkg> for introspection</flag>
+	</use>
 </pkgmetadata>
