@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/lightdm
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/ChangeLog,v 1.2 2010/09/08 07:09:21 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/ChangeLog,v 1.3 2010/11/01 17:37:33 ssuominen Exp $
+
+*lightdm-0.1.2 (01 Nov 2010)
+
+  01 Nov 2010; Samuli Suominen <ssuominen@gentoo.org> +lightdm-0.1.2.ebuild:
+  Version bump.
 
   08 Sep 2010; Kacper Kowalik <xarthisius@gentoo.org> lightdm-0.1.1.ebuild,
   +files/lightdm-0.1.1-webkit.patch, metadata.xml:
